# alpenhorn

./: .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  LICENSE  Makefile  README.md  README.rst  alpenhorn  alpenhorn_ensure_running.sh  alpenhorn_hpss  alpenhorn_verify.py  alpenhornd  alpenhornd.conf  bandwidth_hogd  bandwidth_hogd.conf  cron.hourly.niedermayer  cron.hourly.tubular  logrotate.script  pyproject.toml  requirements.txt  setup.cfg  setup.py  sticky_acq.txt  test-requirements.txt  to_add.txt
.github/workflows/: build_check.yaml  build_docs.yaml  linting.yaml  main.yml  tests.yaml
alpenhorn/: Task.py  __init__.py  acquisition.py  archive.py  auto_import.py  client.py  config.py  db.py  db_tables.py  extensions.py  fairmultififo.py  generic.py  hpss_callback.py  info_base.py  logger.py  old_task.py  pool.py  querywalker.py  queue.py  service.py  storage.py  task.py  timestream.py  update.py  util.py  workers.py
alpenhorn/cli/: __init__.py  cli.py  entry.py  options.py
alpenhorn/cli/acq/: __init__.py  create.py  files.py  list.py  show.py
alpenhorn/cli/db/: __init__.py  init.py
alpenhorn/cli/file/: __init__.py  clean.py  create.py  find.py  import_.py  list.py  modify.py  show.py  state.py  sync.py  verify.py
alpenhorn/cli/group/: __init__.py  autosync.py  create.py  list.py  modify.py  show.py  sync.py
alpenhorn/cli/host/: __init__.py  create.py  delete.py  (+4 more)
alpenhorn/client/: __init__.py  acq.py  cli.py  connect_db.py  entry.py  group.py  node.py  options.py  transport.py
alpenhorn/common/: __init__.py  config.py  extensions.py  extload.py  logger.py  metrics.py  util.py
alpenhorn/daemon/: __init__.py  auto_import.py  entry.py  metrics.py  proc.py  pullutil.py  querywalker.py  service.py  update.py
alpenhorn/db/: __init__.py  _base.py  acquisition.py  archive.py  data_index.py  storage.py
alpenhorn/extensions/: __init__.py  base.py  data_index.py  database.py  import_detect.py  io_class.py
alpenhorn/io/: Default.py  LFSQuota.py  Nearline.py  Polling.py  Transport.py  __init__.py  _default_asyncs.py  _lfs.py  base.py  default.py  ioutil.py  lfs.py  lustrehsm.py  lustrequota.py  polling.py  transport.py  updownlock.py
alpenhorn/legacy/: auto_import.py  client.py  hpss_callback.py  service.py  update.py
alpenhorn/scheduler/: __init__.py  pool.py  queue.py  task.py
alpenhorn/server/: __init__.py  auto_import.py  querywalker.py  service.py  update.py
demo/: Dockerfile.alpenhorn  alpenhorn.conf  demo-script.md  docker-compose.yaml  docker-compose.yml
doc/: Makefile  conf.py  demo.rst  index.rst
doc/coderef/: cli.rst  common.rst  daemon.rst  db.rst  index.rst  io.rst
examples/: README.md  alpenhorn.conf  alpenhorn_robot.sh  alpenhornd.service  pattern_importer.py
install/: Makefile  alpenhornd.conf  alpenhornd.service  cron.hourly.scinet  cron.hourly.transfers  cron.hourly.tubular
scripts/: alpenhorn  alpenhorn_ensure_running.sh  alpenhorn_hpss
tests/: common_funcs.py  conftest.py  generate_data.py  lfs  test_acquisition.py  test_acquisition_model.py  test_archive.py  test_archive_model.py  test_auto_import.py  test_client.py  test_client_acq.py  test_client_group.py  test_client_node.py  test_client_transport.py  test_config.py  test_db.py  test_extensions.py  test_import.py  test_info_base.py  test_logger.py  test_pool.py  test_querywalker.py  test_queue.py  test_service.py  test_storage.py  test_storage_model.py  test_task.py  test_timestream_model.py  test_update.py  test_update_group.py  test_update_node.py  test_util.py  testdata.tar.bz2
tests/cli/: test_client.py  test_options.py
tests/client/: test_client.py  test_client_acq.py  test_client_group.py  test_client_node.py  test_client_transport.py  test_options.py
tests/common/: test_config.py  test_extensions.py  test_extload.py  test_logger.py  test_metrics.py  test_util.py
tests/daemon/: test_auto_import.py  test_entry.py  test_entry_endtoend.py  test_entry_options.py  test_metrics.py  test_proc.py  test_pullutil.py  test_pullutil_crd.py  test_querywalker.py  test_service.py  test_update.py  test_update_group.py  test_update_node.py
tests/db/: test_acquisition.py  test_afcr_finish.py  test_archive.py  test_archive_trigger.py  test_core.py  test_data_index.py  test_storage.py  test_storage_action.py  test_storage_group.py  test_storage_node.py
tests/docker/: Dockerfile.alpenhorn  Dockerfile.base  alpenhorn.conf  custom_test_types.py  test_docker.py
tests/extensions/: test_base.py  test_data_index.py  test_database.py  test_import_detect.py  test_io_class.py
tests/fixtures/: acquisition.yml  archive.yml  files.yml  storage.yml  timestream.yml
tests/io/: test_defaultgroup.py  test_defaultnode.py  test_defaultnode_check.py  test_defaultnode_delete.py  test_defaultnode_pull.py  test_defaultnoderemote.py  test_ioutil.py  test_ioutil_crd.py  test_lfs.py  test_lfsquota.py  test_lustrehsmgroup.py  test_lustrehsmnode.py  test_lustrequota.py  test_nearlinegroup.py  test_nearlinenode.py  test_transport.py  test_updownlock.py
tests/scheduler/: test_pool.py  test_queue.py  test_task.py
tests/server/: test_auto_import.py  test_querywalker.py  test_service.py  test_update.py  test_update_group.py  test_update_node.py
(+136 files in other folders)
