[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-git-versioning"]
build-backend = "setuptools.build_meta"

[project]
name = "alpenhorn"
authors = [
  {name = "Adam D. Hincks", email = "adam.hincks@utoronto.ca"},
  {name = "J. Richard Shaw", email = "jrichardshaw@gmail.com"},
  {name = "D. V. Wiebe", email = "dvw@phas.ubc.ca"}
]
description = "Data archive management software"
maintainers = [
  {name = "D. V. Wiebe", email = "dvw@phas.ubc.ca"}
]
dynamic = ["readme", "version"]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 5 - Production/Stable ",
  "Environment :: Console",
  "Environment :: No Input/Output (Daemon)",
  "Intended Audience :: Science/Research",
  "Operating System :: POSIX",
  "Programming Language :: Python",
  "Topic :: Database :: Front-Ends",
  "Topic :: Scientific/Engineering :: Astronomy",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: System :: Archiving"
]
requires-python = ">=3.11"
dependencies = [
  "Click >= 6.0",
  "concurrent-log-handler",
  "peewee >= 3.17.1",
  "PyYAML",
  "tabulate",
  "watchdog"
]

[project.optional-dependencies]
prometheus = [
  "prometheus_client"
]
dist = [
  "build",
  "twine",
  "packaging"
]
doc = [
  "packaging",
  "Sphinx >= 5.0",
  "sphinx_rtd_theme"
]
test = [
  "pyfakefs >= 5.4",
  "pytest >= 7.0"
]

[project.scripts]
alpenhorn = "alpenhorn.cli:entry"
alpenhornd = "alpenhorn.daemon:entry"

[project.urls]
documentation = "https://alpenhorn.readthedocs.io/"
download = "https://pypi.org/project/alpenhorn/"
issues = "https://github.com/radiocosmology/alpenhorn/issues"
releasenotes = "https://github.com/radiocosmology/alpenhorn/releases"
source = "https://github.com/radiocosmology/alpenhorn/"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "ES01",  # "No Extended Summary section"
    "GL01",  # No text after opening """
    "EX01",  # "No Examples section"
    "SA01",  # "No See Also section"
    ]
exclude = [
    '\._.*$',   # don't check docstrings for private methods
]
exclude_files = [
    'entry.py', # don't check the Click entry-points for the daemon and CLI
]
override_SS05 = [  # override SS05 to allow docstrings starting with these words
    '^Process ',
]


[tool.ruff]
lint.select = ["E", "F", "I", "UP", "NPY", "RUF", "BLE", "C4", "RET"]

[tool.ruff.lint.per-file-ignores]
"alpenhorn/*/__init__.py" = ["I", "F401"]

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
readme = {file = ["README.rst"], content-type = "text/x-rst"}

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"

[tool.setuptools-git-versioning]
enabled = true
